--- a/BeforeID/packages/repositories.config
+++ b/BeforeID/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BeforeID.Data\BeforeID.Data.Model\packages.config" />
   <repository path="..\BeforeID.Presentation\BeforeID.Presentation.Web\packages.config" />
   <repository path="..\BeforeID\packages.config" />
 </repositories>
