--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/BeforeID.Presentation.Web.csproj
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/BeforeID.Presentation.Web.csproj
@@ -127,7 +127,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\src\Pages\" />
     <Folder Include="Views\CategoryData\" />
     <Folder Include="Views\PostData\" />
   </ItemGroup>
@@ -173,6 +172,9 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\src\Main\App.js" />
     <Content Include="Scripts\src\Main\namespace.js" />
+    <Content Include="Scripts\src\Pages\Posts\PostPageViewModel.js" />
+    <Content Include="Scripts\src\Pages\Posts\Utility\PostFormViewModel.js" />
+    <Content Include="Scripts\src\Pages\Posts\Utility\PostsOverviewViewModel.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
     <Content Include="Scripts\_references.js" />
