--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/BeforeID.Presentation.Web.csproj
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/BeforeID.Presentation.Web.csproj
@@ -156,6 +156,9 @@
     <Content Include="Global.asax" />
     <Content Include="Noesis.Javascript\x64\Noesis.Javascript.dll" />
     <Content Include="Noesis.Javascript\x86\Noesis.Javascript.dll" />
+    <None Include="Scripts\amplify-vsdoc.js" />
+    <Content Include="Scripts\amplify.js" />
+    <Content Include="Scripts\amplify.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\css\App.less" />
@@ -163,13 +166,17 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\GPL-LICENSE.txt" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\knockout-3.0.0.debug.js" />
     <Content Include="Scripts\knockout-3.0.0.js" />
+    <Content Include="Scripts\MIT-LICENSE.txt" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\README.txt" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\src\Common\AmplifyKeys.js" />
     <Content Include="Scripts\src\Main\App.js" />
     <Content Include="Scripts\src\Main\namespace.js" />
     <Content Include="Scripts\src\Pages\Posts\PostPageViewModel.js" />
