--- a/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Web.Release.config
+++ b/BeforeID/BeforeID.Presentation/BeforeID.Presentation.Web/Web.Release.config
@@ -7,13 +7,18 @@
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an atrribute "name" that has a value of "MyDB".
+-->
+  <connectionStrings>
+    <add  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="BidContext" connectionString="Server=tcp:bc2i2ufxtl.database.windows.net,1433;Database=BID;User ID=bid@bc2i2ufxtl;Password=GfesMc3V;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+
+  <system.webServer xdt:Transform="Insert">
+    <staticContent>
+      <mimeMap  fileExtension=".woff" mimeType="application/x-font-woff"/>
+    </staticContent>
+  </system.webServer>
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
